Attempted to add blocks, won't drop items, only pushing to receive assistance.

--- a/src/main/resources/assets/jadis_mended_progression/lang/en_gb.json
+++ b/src/main/resources/assets/jadis_mended_progression/lang/en_gb.json
@@ -1,3 +1,5 @@
 {
-  "item.jadis_mended_progression.plant_fiber": "Plant Fibre"
+  "item.jadis_mended_progression.plant_fiber": "Plant Fibre",
+  "block.jadis_mended_progression.charcoal_block": "Charcoal Block",
+  "block.jadis_mended_progression.example_block": "Example Block"
 }
